# BOTW-Save-Editor-GUI

./: .gitignore  Makefile  README.md  meson.build
borealis/: .gitrepo
include/: MainMenu.h  botw_backend.h  main.h  mount.h  translations.h
source/: MainMenu.c  botw_backend.c  main.c  mount.c  translations.c
src/: main.cpp
src/BTWE/: BTWE.hpp  Container.cpp  File.cpp  ItemInput.cpp  SaveFileEditor.cpp  Translations.cpp
src/BTWE/headers/: Container.hpp  File.hpp  ItemInput.hpp  SaveFileEditor.hpp  Translations.hpp
